<resources xmlns:string="http://schemas.android.com/tools">
    <string name="app_name">MyTweet</string>
    <string name="app_login">Login</string>
    <string name="app_signup">Signup</string>
    <string name="welcome_title">Welcome to MyTweet</string>
    <string name="welcome_message">See what\'s happening in the great WIT world right now</string>
    <string name="app_timeline">Timeline</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="signupTitle">Sign up for MyTweet</string>
    <string name="signupSubtitle">Enter details below</string>
    <string name="signupFirstname">First name</string>
    <string name="signupLastName">Last Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="signupRegister">Sign up to MyTweet</string>
    <string name="title_activity_login">Login</string>
    <string name="loginTitle">Login to MyTweet</string>
    <string name="loginSubtitle">You must be registered</string>
    <string name="loginSignin">Sign in</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="menuLogout">Logout</string>
    <string name="new_tweet">New Tweet</string>
    <string name="send_tweet">Tweet</string>
    <string name="refresh">Refresh Tweet List</string>
    <string name="text_tweet"/>
    <string name="chars_tweet"/>
    <string name="email_via">Tweet via Email</string>
    <string name="select_contact">Select contact</string>
    <string name="app_mytweet">My Tweet</string>
    <string name="action_settings">Settings</string>
    <string name="clear">Delete all</string>
    <string name="tweet_date"/>
    <string name="dialog_title">Warning!</string>
    <string name="dialog_text">Delete all tweets?</string>
    <string name="dialog_ok">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="username_summary">What\'s your username?</string>
    <string name="username">Username?</string>
    <string name="password_summary">How do you login?</string>
    <string name="password">Password</string>
    <string name="nmr_tweets">Configure Downloads</string>
    <string name="nmr_tweets_summary">How many Tweets to store locally?</string>
    <string name="set_refresh_interval">Refresh</string>
    <string name="set_refresh_interval_summary">How frequently should data refresh (minutes)</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="delete_tweet">Delete Tweet</string>
    <string name="email_tweet_subject">My Latest Tweet!</string>
</resources>
