<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_tweet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.mytweet.activities.MyTweetPagerActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_tweet"
        app:counterEnabled="true"
        app:counterMaxLength="140">

        <EditText
            android:ems="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/send_tweet"
            android:layout_toEndOf="@+id/send_tweet"
            android:id="@+id/text_tweet"
            android:layout_alignParentStart="true"
            android:hint="What\'s on your mind?"
            android:maxLength="140"
            android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/chars_count"
        android:maxLength="140"
        android:inputType="textFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_alignTop="@+id/send_tweet"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_alignParentStart="true" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:id="@+id/tweet_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_tweet"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        android:layout_marginLeft="149dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:text="@string/tweet_date"/>

    <Button
        android:text="@string/send_tweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="29dp"
        android:layout_marginTop="18dp"
        android:id="@+id/send_tweet"
        style="@android:style/Widget.Button" />

    <Button
        android:text="@string/email_via"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_tweet"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/contact_tweet"
        style="@android:style/Widget.Button" />

    <Button
        android:text="@string/select_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contact_tweet"
        android:layout_above="@+id/email_tweet"
        android:layout_centerHorizontal="true"
        style="@android:style/Widget.Button" />

</RelativeLayout>
